--- a/story/css/story.css
+++ b/story/css/story.css
@@ -9,7 +9,7 @@ body {
     }
     img, video  {
         max-width: 100%;
-        height: 812px;
+        height: 100vh;
         display: block;
         margin: auto;
     }
